# VintageModManager

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  clippy.toml  readme  readme.md  rustfmt.toml
.github/: CODEOWNERS
.github/workflows/: formatter.yml  release.yml  test.yml
libraries/api/: Cargo.toml
libraries/api/src/: apidata.rs  apidatahandler.rs  client.rs  files.rs  lib.rs  moddatahandler.rs  modinfo.rs  query.rs
libraries/utils/: Cargo.toml
libraries/utils/src/: cli.rs  config.rs  encoding.rs  files.rs  lib.rs  logger.rs  system.rs
src/: config.rs  main.rs
src/api/: apidata.rs  client.rs  files.rs  mod.rs  mod_api_response.rs  mod_info.rs  moddatahandler.rs  modinfo.rs  query.rs  releases.rs
src/utils/: Query.rs  api.rs  cli.rs  config.rs  config_manager.rs  encoding.rs  files.rs  logger.rs  mod.rs  mod_manager.rs  progress.rs  system.rs  terminal.rs
tests/: api_client_tests.rs  api_files_tests.rs  api_query_tests.rs  api_tests.rs  apidatahandler_tests.rs  utils_encoding_tests.rs  utils_files_tests.rs
