[package]
name = "VintageModManager"
version = "0.5.3"
edition = "2021"
authors = [
    "Mikkel M.H Pedersen <@mikkel.helding@gmail.com>"
]
license = "MIT"
description = "A mod manager for Vintage Story"
repository = "https://github.com/HollowNumber/VintageModManager"
readme = "readme.md"

[profile.release]
lto = true

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
bytes = "1.10.0"
thiserror = "2.0.11"
spinners = "4.1.1"
indicatif = { version = "0.17.11", features = ["rayon"] }
bincode = "1.3.3"
clap = { version = "4.5.28", features = ["derive"] }
rayon = "1.10.0"
chrono = "0.4.39"
zip = "2.2.2"
directories = "6.0.0"
tokio-stream = { version = "0.1.17", features = ["fs"] }
brotli = "7.0.0"
base85 = "2.0.0"