[package]
name = "VintageModManager"
version = "0.7.2"
edition = "2024"
authors = [
    "Mikkel M.H Pedersen <@mikkel.helding@gmail.com>"
]
license = "MIT"
description = "A mod manager for Vintage Story"
repository = "https://github.com/HollowNumber/VintageModManager"
readme = "README.md"
categories = ["command-line-utilities", "games", "development-tools"]
keywords = ["vintage-story", "mod-manager", "cli", "game-tools"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
thiserror = "2.0.11"
colored = "3.0.0"
spinners = "4.1.1"
indicatif = { version = "0.17.11", features = ["rayon"] }
clap = { version = "4.5.28", features = ["derive"] }
rayon = "1.10.0"
chrono = "0.4.39"
zip = "2.2.2"
directories = "6.0.0"
tokio-stream = { version = "0.1.17", features = ["fs"] }
brotli = "7.0.0"
base85 = "2.0.0"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
toml = "0.9.5"
regex = "1.11.1"


[dev-dependencies]
tempfile = "3.17.1"