[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"]}
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
serde_derive = "1.0.119"
tokio = { version = "1.0.2", features = ["full"] }
bytes = "1.10.0"
utils = { path = "../utils" }
