[package]
name = "utils"
version = "0.3.2"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.39"
thiserror = "2.0.11"
tokio = "1.43.0"
bytes = "1.10.0"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
zip = "2.2.2"
directories = "6.0.0"
tokio-stream = { version = "0.1.17", features = ["fs"] }
clap = { version = "4.5.28", features = ["derive"] }
brotli = "7.0.0"
base85 = "2.0.0"